[package]
name = "bevy_terrain"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["file_watcher", "jpeg"] }
bevy_flycam = "0.15"
bevy-inspector-egui = "0.28"
# bevy_mod_raycast = "0.18.0"

gltf = "1.3"
image = "0.25"
nalgebra = { version = "0.33", features = ["rayon"] }
rayon = "1.10"

